[gd_scene load_steps=8 format=2]

[ext_resource path="res://vehicles/wheelchair/model/wheelchair_model.tscn" type="PackedScene" id=1]
[ext_resource path="res://vehicles/wheelchair/Wheelchair.gd" type="Script" id=2]
[ext_resource path="res://scripts/pid_calc.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.207, 0.02, 0.25 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.207, 0.02, 0.1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.166994, 0.02, 0.0451105 )

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.206764, 0.268336, 0.0142708 )

[node name="Wheelchair" type="VehicleBody"]
continuous_cd = true
script = ExtResource( 2 )

[node name="CollisionShapeSeat" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0738329, 0 )
shape = SubResource( 2 )

[node name="CollisionShapeAntiTip" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, -0.349691, 0.335893 )
shape = SubResource( 4 )

[node name="CollisionShapeFootrest" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, 0, -0.398437, -0.460226 )
shape = SubResource( 3 )

[node name="CollisionShapeBack" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0493933, 0.187811 )
shape = SubResource( 1 )

[node name="Model" parent="." instance=ExtResource( 1 )]

[node name="WheelRearLeft" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.245, -0.21, 0.173 )
use_as_traction = true
wheel_radius = 0.28
wheel_rest_length = 0.018
wheel_friction_slip = 1.0
suspension_travel = 0.02
suspension_stiffness = 190.0
damping_compression = 0.95
damping_relaxation = 0.98

[node name="WheelRearRight" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.245, -0.21, 0.173 )
use_as_traction = true
wheel_radius = 0.28
wheel_rest_length = 0.018
wheel_friction_slip = 1.0
suspension_travel = 0.02
suspension_stiffness = 190.0
damping_compression = 0.95
damping_relaxation = 0.98

[node name="WheelFrontLeft" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.245, -0.412604, -0.218373 )
use_as_steering = true
wheel_radius = 0.08
wheel_rest_length = 0.002
wheel_friction_slip = 0.3
suspension_travel = 0.03
suspension_stiffness = 200.0
suspension_max_force = 1000.0
damping_compression = 0.95
damping_relaxation = 0.98

[node name="WheelFrontRight" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.245, -0.413, -0.218 )
use_as_steering = true
wheel_radius = 0.08
wheel_rest_length = 0.002
wheel_friction_slip = 0.3
suspension_travel = 0.03
suspension_stiffness = 200.0
suspension_max_force = 1000.0
damping_compression = 0.95
damping_relaxation = 0.98

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 0.6, 1 )
far = 10000.0

[node name="PIDCalcWheelLeft" type="Node" parent="."]
script = ExtResource( 3 )
term_P = 0.5
param_tuning_active = false

[node name="PIDCalcWheelRight" type="Node" parent="."]
script = ExtResource( 3 )
term_P = 0.5
param_tuning_active = false
